# gostpdf

./: .gitignore  AGENTS.md  INSTALL.md  PLAN.md  architecture.md  content  hierarchy-analysis.md  prd.md  pyproject.toml  todo.md
config/: project.yml
md-samples/02.ekspluatatsiya/: .navigation.yml
md-samples/02.ekspluatatsiya/010000.obshi-svede/: .navigation.yml  010100.nazna-kompl.md  010200.funkt-kompl.md  010300.oblas-prime.md  010400.uslov-prime.md  010500.perec-dokum.md
md-samples/02.ekspluatatsiya/020000.struk-kompl/: 0.index.md
md-samples/02.ekspluatatsiya/030000.inst-i-setup-kompl/: 0.index.md
md-samples/02.ekspluatatsiya/040000.inter-kompl/: 0.index.md  040100.dostu-polzo-i-navig.md  040200.poisk-obekt.md  040300.avtor-v-kompl.md  040400.pravi-vypol-opera.md
md-samples/02.ekspluatatsiya/050000.admin/: .navigation.yml  050100.organ.md  050200.mesto.md  050300.setup-auten-polzo-chere.md  050400.rolev-model-polzo.md  050500.zakla.md  050600.funkt-udale-vypol.md  050700.podkl-kompl-k-vnesh.md  050800.setup-iskho-pocht.md
output/: ekspluatatsiya.aux  ekspluatatsiya.bundle.md  ekspluatatsiya.out  ekspluatatsiya.tex
public/: images
scripts/: install_fonts.sh
src/md2pdf/: __init__.py  bundle.py  cli.py  config.py  images.py  pandoc_runner.py  pipeline.py  reporting.py  walker.py
styles/: style.yaml
templates/: gost.tex
tests/: test_bundle.py  test_cli.py  test_config.py  test_images.py  test_pandoc_runner.py  test_pipeline.py  test_pipeline_integration.py  test_reporting.py  test_template.py  test_walker.py
(+57 files in other folders)
