[project]
name = "gostpdf"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src/md2pdf"]
show_error_codes = true
warn_unused_configs = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "md2pdf.walker"
strict = true
